Small layout adjustments and fix video not playing on iOS Markdownify texts

--- a/assets/bulma/sass/elements/content.sass
+++ b/assets/bulma/sass/elements/content.sass
@@ -139,3 +139,8 @@ $content-table-foot-cell-color: $text-strong !default
     font-size: $size-medium
   &.is-large
     font-size: $size-large
+
+.media-box-icon
+  +mobile
+    padding-left: 2rem
+    padding-right: 2rem
