--- a/assets/bulma/sass/layout/hero.sass
+++ b/assets/bulma/sass/layout/hero.sass
@@ -153,3 +153,13 @@
   flex-grow: 1
   flex-shrink: 0
   padding: 3rem 3rem
+
+.hero-box-icon
+  +mobile
+    flex-grow: 0.8 !important
+.hero-body
+  +mobile
+    padding-top: 3rem !important
+.hero-body
+  +mobile
+    padding-top: 3rem !important
